     are no longer supported.
  6) There are two new request attributes: "language" specifying default clustering
     language for documents that don't declare it explicitly and "create_ungrouped" which
     forces the plugin to create a synthetic group with unclustered document references
     (this corresponds to "other topics" group from previous Carrot2 versions).
  7) At the moment of writing Lingo3G algorithm is *not* supported yet in the new
     infrastructure.

================ ElasticSearch-Carrot2 7.5.0 ====================

Other changes

* Build updates to ES 7.5.0.

================ ElasticSearch-Carrot2 7.3.2 ====================

Other changes

* Build updates to ES 7.3.2.

================ ElasticSearch-Carrot2 7.2.1 ====================

Other changes

* Build updates to ES 7.2.1.
* Switch dependency from simple-xml to simple-xml-safe.

================ ElasticSearch-Carrot2 7.2.0 ====================

Other changes

* Build updates to ES 7.2.0.

================ ElasticSearch-Carrot2 7.1.1 ====================

Other changes

* Build updates to ES 7.1.1.

================ ElasticSearch-Carrot2 7.0.0 ====================

Other changes

* Build updates to ES 7.0.0.

================ ElasticSearch-Carrot2 6.8.5 ====================

Other changes

* Build updates to ES 6.8.5.

================ ElasticSearch-Carrot2 6.7.2 ====================

Other changes

* Build updates to ES 6.7.2.

================ ElasticSearch-Carrot2 6.7.1 ====================

Other changes

* Build updates to ES 6.7.1.

================ ElasticSearch-Carrot2 6.6.2 ====================

Other changes

* Build updates to ES 6.6.2.

================ ElasticSearch-Carrot2 6.5.4 ====================

Other changes

* Build updates to ES 6.5.4.

================ ElasticSearch-Carrot2 6.4.3 ====================

Other changes

* Build updates to ES 6.4.3.

* Permit custom resource lookup location for each algorithm. This can be accomplished